# finance-playground

./: .gitignore  README.md  app.py  pyproject.toml
notebook/: stock_tool.ipynb
notebook/utils/: database.py  get_info.py
